base registro, login y edit funcionando

--- a/src/app/pages/menu/admin-register/admin-register.page.html
+++ b/src/app/pages/menu/admin-register/admin-register.page.html
@@ -51,12 +51,13 @@
 
   <ion-item>
     <ion-label position="stacked">email</ion-label>
-    <ion-input (ngModel)="admin.email" type="text" placeholder="email"></ion-input>
+    <ion-input [(ngModel)]="admin.email" type="text" placeholder="email"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="stacked">Contraseña</ion-label>
-    <ion-input (ngModel)="admin.password" type="text" placeholder="Contraseña"></ion-input>
+    <ion-input [(ngModel)]="admin.password" type="text" placeholder="Contraseña"></ion-input>
   </ion-item>
   <ion-button expand="block"(click)="login()">Login</ion-button>
-  <ion-input type="text" placeholder="Awesome Input">{{user}}</ion-input>
+  <ion-button expand="block"(click)="logout()">cerrar</ion-button>
+  <ion-input type="text" placeholder="Awesome Input"></ion-input>
 </ion-content>
