--- a/src/app/pages/menu/home/home.page.html
+++ b/src/app/pages/menu/home/home.page.html
@@ -8,6 +8,7 @@
     Click me
 </ion-button>
 
+<!--Estos ngmodel estan vacios hasta que uso el getTerm [()] en ngmodel es el que sirve-->
 <ion-input  type="text" [(ngModel)]="term.terms"></ion-input>
 <ion-input  type="text" [(ngModel)]="term.title"></ion-input>
 
