--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -1,7 +1,7 @@
 
 <ion-split-pane  contentId="content">
   
-  <ion-menu contentId="content" menuId="content" side="start">
+  <ion-menu  menuId="content" side="start">
     <ion-content class="ion-padding-vertical ion-text-center">
      
       <ion-menu-toggle auto-hide="false" *ngFor="let p of pages" id="toggle">
