--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,5 @@
 <ion-header>
   <ion-toolbar color="success">
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/" >
-      </ion-back-button>
-    </ion-buttons>
+    <ion-title>{{ title }}</ion-title>
   </ion-toolbar>
 </ion-header>
