--- a/src/app/pages/menu/term-detail/term-detail.page.html
+++ b/src/app/pages/menu/term-detail/term-detail.page.html
@@ -11,6 +11,7 @@
 
 <ion-input  type="text" [(ngModel)]="term.terms"></ion-input>
 <ion-input  type="text" [(ngModel)]="term.title"></ion-input>
+<ion-input  type="text" [(ngModel)]="term.date"></ion-input>
 <ion-button (click)="edit()" color="danger">
   Click me
 </ion-button>
