--- a/src/app/pages/menu/term/term.page.html
+++ b/src/app/pages/menu/term/term.page.html
@@ -3,10 +3,10 @@
 <ion-content>
   <ion-card-content>
     <ion-col size="12">
-      <ion-item lines="none">
+      <ion-item lines="full">
         <ion-label position="stacked">Pregunta</ion-label>
         <ion-input
-          [(ngModel)]="term.terms"
+          [(ngModel)]="term.terms" 
           type="text"
           placeholder="Escribe una pregunta frecuente"
           [autoGrow]="true"
@@ -14,7 +14,7 @@
       </ion-item>
     </ion-col>
     <ion-col size="12">
-      <ion-item lines="none">
+      <ion-item lines="full">
         <ion-label position="stacked">Respuesta</ion-label>
         <ion-textarea
           name="title"
@@ -23,6 +23,18 @@
           
         ></ion-textarea>
       </ion-item>
+      <ion-col size="12">
+        <ion-datetime 
+  minuteValues="0,30"
+  displayFormat="DD/MMM/YYYY HH:mm:ss"
+  mode="ios" 
+  [(ngModel)]="term.date"
+  hourValues="8,9,10,11,12,13,14,15,16,17,18"
+  locale="es-ES"
+>
+  <span slot="time-label">Hora</span>
+</ion-datetime>
+      </ion-col>
     </ion-col>
     <ion-col size="12">
       <div class="ion-text-center">
@@ -32,6 +44,9 @@
       </div>
     </ion-col>
   </ion-card-content>
+
+  <!--Lista de objetos dto, se recorre on un for y luego en la funcion se pasa el item de esta forma se puede editar,
+  estoy pasando el objeto completo a la funcion verTerm-->
 
   <ion-card-content *ngFor="let item of terms;">
     <ion-label>id: {{ item.id }} title: {{ item.title }} </ion-label>
