--- a/src/global.scss
+++ b/src/global.scss
@@ -24,6 +24,8 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+@import '~@ionic/angular/css/ionic.bundle.css';
+
 
 ion-content{
     --background: var(--ion-color-primary);
@@ -67,3 +69,6 @@ ion-button{
     justify-content: center;
     align-items: center;
 }
+ion-datetime {
+    color: black; // Cambia el color a tu preferencia
+  }
