--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -34,6 +34,9 @@
             <ion-button color="primary" size="medium" shape="round" expand="block" (click)="login()">
             hola3
             </ion-button>
+            <ion-button color="danger" size="medium" shape="round" expand="block" (click)="logout()">
+              cerrar
+              </ion-button>
           </div>
           <!--ion-item color="dark">
             <ion-label>{{ 'Login.Language' | translate }}</ion-label>
