--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -1,33 +1,16 @@
-
-<ion-split-pane  contentId="content">
-  
-  <ion-menu  menuId="content" side="start">
+<ion-split-pane contentId="content">
+  <ion-menu menuId="content" side="start" class="menu-negro">
     <ion-content class="ion-padding-vertical ion-text-center">
-     
-      <ion-menu-toggle auto-hide="false" *ngFor="let p of pages" id="toggle">
-        <ion-item
-          lines="none"
-            
-          [routerLink]="p.url"
-          routerDirection="root"
-          detail
-        >  
-        <ion-icon id="icon" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-outline'"></ion-icon>
-        <ion-label id="title">{{ p.title }}</ion-label>
+      <ion-menu-toggle auto-hide="false" *ngFor="let p of pages">
+        <ion-item lines="none" [routerLink]="p.url" routerDirection="root" detail>
+          <ion-icon id="icon" slot="start" [name]="p.icon" color="dark"></ion-icon>
+          <ion-label id="title">{{ p.title }}</ion-label>
         </ion-item>
       </ion-menu-toggle>
-    
     </ion-content>
-    <ion-footer >
-<ion-item>
-  
-  
- 
-</ion-item>
-</ion-footer>
+    <ion-footer>
+      <ion-item></ion-item>
+    </ion-footer>
   </ion-menu>
   <ion-router-outlet id="content" main></ion-router-outlet>
-  
 </ion-split-pane>
-
-
