--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,8 +1,71 @@
 
 <ion-content>
 
+<ion-row>
+
+  <!-- Login -->
+  <ion-col size="3" >
+    <div style="background-color: #FFFFFF; padding: 30px 0px;" class="ion-text-center">
+      <img src="../../assets//img/logo-fondo-blanco.png" width="300px">
+    </div>
+    <ion-item lines="none" *ngIf="!Recover">
+      <ion-label position="stacked" class="ion-padding-bottom">Email</ion-label>
+      <ion-input type="text" [(ngModel)]="admin.email"></ion-input>
+    </ion-item>
+    <ion-item lines="none" *ngIf="!Recover">
+      <ion-label position="stacked" class="ion-padding-bottom">Contraseña</ion-label>
+      <ion-input type="password" [(ngModel)]="admin.password"></ion-input>
+    </ion-item>
+
+    <p *ngIf="!Recover" style="cursor:pointer;font-size: .8em !important;color:rgb(0, 0, 0);"
+    (click)="showRecover()">
+      Recuperar contraseña
+    </p>
+
+
+    <div class="ion-padding" *ngIf="Recover">
+      <ion-list style="background: transparent;">
+        <ion-item  lines="none" >
+          
+          <ion-input   type="email" placeholder="hola5" [(ngModel)]="admin.email">
+          </ion-input>
+        </ion-item>
+      
+
+        <div class="ion-text-center">
+          <ion-button color="dark" shape="round" (click)="recoveryPass()" size="medium" class="text-uppercase">
+           hola5
+           </ion-button>
+           <ion-button fill="outline" (click)="showRecover()" *ngIf="Recover" size="medium" color="danger" shape="round"  >
+       hola6</ion-button>
+        </div>
+      </ion-list>
+      
+      
+    </div>
+  </ion-col>
+
+
+  <!-- Fondo -->
+  <ion-col size="9" class="ion-no-padding">
+    <div class="fondo-login" style="background-image: url(../../../assets/img/fondo-login.jpg);"></div>
+  </ion-col>
+
+
   
-  <ion-grid>
+</ion-row>
+
+
+
+
+
+
+
+
+
+
+
+  <!-- <ion-grid>
     <ion-row>
       <ion-col *ngIf="!Recover" size-xs="12" size-sm="12" size-md="4" size-lg="3">
         <div style="background-color: #FFFFFF; padding: 30px 0px;" class="ion-text-center">
@@ -38,14 +101,7 @@
               cerrar
               </ion-button>
           </div>
-          <!--ion-item color="dark">
-            <ion-label>{{ 'Login.Language' | translate }}</ion-label>
-            <ion-select [(ngModel)]="language" (ionChange)="changeLanguage()" okText="{{ 'Select.Ok' | translate }}"
-              cancelText="{{ 'Select.Cancel' | translate }}">
-              <ion-select-option value="es">Español</ion-select-option>
-              <ion-select-option value="en">English</ion-select-option>
-            </ion-select>
-          </ion-item-->
+        
         </ion-list>
       </ion-col>
 
@@ -85,82 +141,9 @@
 
       
       <ion-col size-xs="12" size-sm="12" size-md="8" size-lg="9">
-        <div class="fondo-login" style="background-image: url(../../../assets/img/flower.jpg); background-size: cover;"></div>
+        <div class="fondo-login" style="background-image: url(../../../assets/img/flower.jpg);"></div>
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid> -->
 
 </ion-content>
-
-
-
-
-
-
-
-
-
-
-
-
-<!--
-
-
-
-
-
-
-<ion-content>
-  <div style="background-color: #2c2c2c; padding: 50px 0px;" class="ion-text-center">
-    <img src="assets/img/logo.jpg">
-  </div>
-
-
-  <ion-grid class="ion-text-center">
-    <ion-row  *ngIf="!Recover">
-      <ion-col></ion-col>
-      <ion-col>
-        <ion-list>
-          <ion-item>
-            <ion-label position="stacked">  {{'LOGIN_PAGE.User' | translate }}</ion-label>
-            <ion-input type="text" [(ngModel)]="emailLog"></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label position="stacked"> {{'LOGIN_PAGE.Password' | translate }}</ion-label>
-            <ion-input type="password" [(ngModel)]="claveLog"></ion-input>
-          </ion-item>
-        
-
-        </ion-list>
-      </ion-col>
-      <ion-col></ion-col>
-    </ion-row>
-
-    <ion-row lines="none" *ngIf="Recover" class="ion-padding ion-text-center">
-   
-      
-  
-    <ion-col size="12" lines="none">
-      <p color="dark">
-        {{'LOGIN_PAGE.Recover' | translate }}
-      </p>
-  
-      <ion-input class="text-input" type="text" [(ngModel)]="emailLog" placeholder="{{ 'email' }}">
-      </ion-input>
-   
-    </ion-col>
-    <ion-col size="12">
-      <ion-button color="dark" shape="round" (click)="recoveryPass()" size="medium" class="text-uppercase">
-        {{'LOGIN_PAGE.Confirm' | translate }}
-       </ion-button>
-    </ion-col>
-   
-  </ion-row>
-  <ion-button fill="outline" (click)="showRecover()" *ngIf="!Recover" size="medium" color="dark" shape="round"  >
-    {{'LOGIN_PAGE.RecoverPass' | translate }}</ion-button>
-  <ion-button color="success" size="medium"  *ngIf="!Recover" (click)="doLogin()">Entrar</ion-button>
-  <ion-button fill="outline" (click)="showRecover()" *ngIf="Recover" size="medium" color="danger" shape="round"  >
-    {{'LOGIN_PAGE.Close' | translate }}</ion-button>
-  </ion-grid>
-
-</ion-content>-->
