--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,5 +1,7 @@
 .fondo-login {
-    height: 100%;
-    width:100%;
-    min-height: 530px;
+    height: 100vh;
+}
+
+.col{
+    background-color: red;
 }
