--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -5,3 +5,13 @@
 .col{
     background-color: red;
 }
+
+ion-input {
+    background-color: #FFFFFF;
+    border: #b4b4b4 3px solid;
+    border-radius: 0px; 
+    margin-top: 10px;
+    padding-left: 10px !important;
+    color: #7c7c7c !important;
+
+ }
