--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="success">
+  <ion-toolbar [color]="color" class="ion-text-center">
     <ion-title>{{ title }}</ion-title>
   </ion-toolbar>
 </ion-header>
