--- a/src/app/pages/menu/home/home.page.html
+++ b/src/app/pages/menu/home/home.page.html
@@ -1,23 +1,12 @@
-<app-header [title]="'Inicio'"></app-header>
+<app-header [title]="'Productos'" [color] = "'dark'"></app-header>
 
 
 <ion-content class="ion-text-center">
-<h1>Ingresa el id del term </h1>
 
-<ion-input
-  aria-label="Custom input"
-  placeholder="Ingresa tu correo"
-  class="custom"
-  helperText="Helper text"
-  [maxlength]="20"
-  type="text" [(ngModel)]="term.id"
-></ion-input>
-<ion-button (click)="getTerm()" expand="block"  shape="round">
-    Click me
-</ion-button>
-
-<!--Estos ngmodel estan vacios hasta que uso el getTerm [()] en ngmodel es el que sirve-->
-<ion-input  type="text" [(ngModel)]="term.terms"></ion-input>
-<ion-input  type="text" [(ngModel)]="term.title"></ion-input>
+  <div class="ion-text-center ion-padding-top">
+    <ion-button  color="success">
+      Crear producto
+    </ion-button>
+  </div>
 
 </ion-content>
