--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -20,7 +20,7 @@
       </ion-item>
 
       <div class="ion-text-center">
-        <ion-button color="dark" size="large" shape="round"  (click)="login()">
+        <ion-button color="dark" size="large" (click)="login()">
           Entrar
         </ion-button>
       </div>
