--- a/src/global.scss
+++ b/src/global.scss
@@ -27,43 +27,35 @@
 @import '~@ionic/angular/css/ionic.bundle.css';
 
 
-.content{
-    width: 100%;
-    height: 88vh;
-    background: var(--ion-color-light);
-    color: var(--ion-color-light-contrast);
-    border-radius: 20px 20px 0 0;
-    margin-top: 5vh;
-    padding: 15px 0;
 
-    box-shadow: 1px -6px 41px -15px rgba(0,0,0,0.35);
-    -webkit-box-shadow: 1px -6px 41px -15px rgba(0,0,0,0.75);
-    -moz-box-shadow: 1px -6px 41px -15px rgba(0,0,0,0.75);
-}
-
-h1{
-    font-size: 30px;
-}
-ion-item{
-    --background: transparent;
-}
-
-.validators{
-    font-size: 14px;
-    color: var(--ion-color-danger);
-    padding-bottom: 15px;
-    text-align: center;
-}
-
-ion-button{
-    text-transform: capitalize;
-}
-
-.d-flex-center{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-ion-datetime {
-    color: black; // Cambia el color a tu preferencia
+.efect-form{
+    animation-duration: 1.25s;
+      animation-name: efect;
+      animation-iteration-count: 1;
+      animation-direction: alternate;
   }
+  
+  @keyframes efect {
+    from {
+        transform: translateY(-100%);
+        opacity: 0;
+    }  
+    to {
+        transform: translateY(0);
+        opacity: 1;
+   }
+ }
+
+ .border{
+    border: 1px solid rgb(207, 207, 207);
+ }
+
+ ion-input{
+  background-color: #FFFFFF;
+  border: #b4b4b4 2px solid;
+  border-radius: 5px; 
+  margin-top: 10px;
+  padding-left: 5px !important;
+  color: #7c7c7c !important;
+}
+
